@@ -1,0 +1,7 @@
+(čupřina
+Ačaj teč
+)čupřina
+-datíčka
+_komentář
+?cíl datíčka
+špatný element
