@@ -1,4 +1,6 @@
 0.07
+ [PYX::Parser]
+ - Add test for utf-8 encoded data.
 
 0.06 2020-03-23T11:23:38+01:00
  [Common]
